--- a/Manifests/ManagedPreferencesApplications/xyz.techitout.appAutoPatch.plist
+++ b/Manifests/ManagedPreferencesApplications/xyz.techitout.appAutoPatch.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2025-04-29T11:21:00Z</date>
+	<date>2025-05-16T10:13:48Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -248,7 +248,7 @@
 			<key>pfm_title</key>
 			<string>Patch Week Start Day</string>
 			<key>pfm_type</key>
-			<string>string</string>
+			<string>integer</string>
 		</dict>
 		<dict>
 			<key>pfm_app_min</key>
