--- a/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
+++ b/Manifests/ManagedPreferencesApplications/com.jamf.setupmanager.plist
@@ -140,6 +140,7 @@ A profile can consist of payloads with different version numbers. For example, c
 				<string>Enrollment Actions</string>
 				<string>User Entry</string>
 				<string>Webhooks</string>
+				<string>Network Connectivity</string>
 				<string>Help</string>
 				<string>Jamf Pro only</string>
 				<string>Debugging</string>
@@ -175,6 +176,7 @@ A profile can consist of payloads with different version numbers. For example, c
 					<string>computerNameTemplate</string>
 					<string>hideActionLabels</string>
 					<string>actionOutputLogging</string>
+					<string>PLEASE_DO_NOT_TRACK</string>
 				</array>
 				<key>Help</key>
 				<array>
@@ -184,6 +186,10 @@ A profile can consist of payloads with different version numbers. For example, c
 				<array>
 					<string>jssID</string>
 					<string>userID</string>
+				</array>
+				<key>Network Connectivity</key>
+				<array>
+					<string>networkCheck</string>
 				</array>
 				<key>User Entry</key>
 				<array>
@@ -2032,11 +2038,113 @@ A profile can consist of payloads with different version numbers. For example, c
 					<key>pfm_type</key>
 					<string>array</string>
 				</dict>
+				<dict>
+					<key>pfm_description</key>
+					<string>Enables webhook debug mode.</string>
+					<key>pfm_documentation_url</key>
+					<string>https://github.com/jamf/Setup-Manager/blob/main/Docs/Webhooks.md#webhooks-in-debug-mode</string>
+					<key>pfm_name</key>
+					<string>DEBUG</string>
+					<key>pfm_title</key>
+					<string>Webhook Debug Mode</string>
+					<key>pfm_type</key>
+					<string>boolean</string>
+				</dict>
 			</array>
 			<key>pfm_title</key>
 			<string>Webhooks</string>
 			<key>pfm_type</key>
 			<string>dictionary</string>
+		</dict>
+		<dict>
+			<key>pfm_app_min</key>
+			<string>1.3</string>
+			<key>pfm_description</key>
+			<string>Provides a list of hosts to check connectivity to. These will be shown in the 'Connectivity' section in the network info pane. Be sure to read the documentation before configuring.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://github.com/jamf/Setup-Manager/blob/main/Docs/Network.md</string>
+			<key>pfm_name</key>
+			<string>networkCheck</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_subkeys</key>
+					<array>
+						<dict>
+							<key>pfm_description</key>
+							<string>The host name, e.g. host.example.com (no url scheme) to test a connection to.</string>
+							<key>pfm_name</key>
+							<string>host</string>
+							<key>pfm_required</key>
+							<true/>
+							<key>pfm_title</key>
+							<string>Host</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_default</key>
+							<integer>443</integer>
+							<key>pfm_description</key>
+							<string>The port to test a connection to.</string>
+							<key>pfm_name</key>
+							<string>port</string>
+							<key>pfm_title</key>
+							<string>Port</string>
+							<key>pfm_type</key>
+							<string>integer</string>
+						</dict>
+						<dict>
+							<key>pfm_default</key>
+							<string>tcp</string>
+							<key>pfm_description</key>
+							<string>The connection protocol to test</string>
+							<key>pfm_name</key>
+							<string>protocol</string>
+							<key>pfm_range_list</key>
+							<array>
+								<string>tcp</string>
+								<string>udp</string>
+							</array>
+							<key>pfm_range_list_titles</key>
+							<array>
+								<string>TCP</string>
+								<string>UDP</string>
+							</array>
+							<key>pfm_title</key>
+							<string>Protocol</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+						<dict>
+							<key>pfm_description</key>
+							<string>A display label for the connection test.</string>
+							<key>pfm_name</key>
+							<string>label</string>
+							<key>pfm_title</key>
+							<string>Label</string>
+							<key>pfm_type</key>
+							<string>string</string>
+						</dict>
+					</array>
+					<key>pfm_type</key>
+					<string>dictionary</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Network Checks</string>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Suppress launch tracking by enabling this setting.</string>
+			<key>pfm_name</key>
+			<string>PLEASE_DO_NOT_TRACK</string>
+			<key>pfm_title</key>
+			<string>Do Not Track</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
