--- a/Manifests/ManagedPreferencesApplications/com.microsoft.autoupdate2.plist
+++ b/Manifests/ManagedPreferencesApplications/com.microsoft.autoupdate2.plist
@@ -305,6 +305,20 @@ Writes logs to: /Library/Logs/Microsoft/autoupdate.log</string>
 			<string>boolean</string>
 		</dict>
 		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>Keeps a clone of an application in a cache location. This helps prevent update failures caused by security software that modifies installed applications.</string>
+			<key>pfm_documentation_url</key>
+			<string>https://learn.microsoft.com/en-us/microsoft-365-apps/mac/mau-preferences</string>
+			<key>pfm_name</key>
+			<string>GuardAgainstAppModification</string>
+			<key>pfm_title</key>
+			<string>Guard Against App Modification</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
 			<key>pfm_app_min</key>
 			<string>3.8</string>
 			<key>pfm_default</key>
